# kira-project

./: .cursorignore  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LANGGRAPH-STATUS.md  Makefile  PERFORMANCE-ANALYSIS.md  PHASE_0_1_COMPLETE.md  QUICKSTART.md  README-LANGGRAPH.md  README.md  SUMMARY.md  TESTING-MEMORY-FIX.md  TEST_IMPROVEMENTS_SUMMARY.md  compose.dev.yaml  compose.yaml  coverage.json  coverage.xml  demo_inbox_plugin.py  kira  kira.yaml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
.kira/ontology/: fsm-task.yaml
artifacts/: conversations.db
artifacts/audit/: audit-2025-10-08.jsonl  audit-2025-10-09.jsonl
config/: .secrets.example.json  README-ENV.md  README.md  defaults.yaml  env.example  kira.yaml.example
config/policies/: agent_policy.json  sandbox_policies.yaml
docs/: HOW-TO-ENABLE-LANGGRAPH.md  MANIFEST_SCHEMA.md  PHASE0_IMPLEMENTATION.md  PHASE0_MIGRATION.md  PHASE1_IMPLEMENTATION.md  PHASE2_IMPLEMENTATION.md  PHASE6_STATUS.md  PHASE_10_SUMMARY.md  PRODUCTION_READINESS.md  READINESS_CHECKLIST.md  SCHEDULE_MANAGEMENT_GUIDE.md  SETUP_GUIDE.md  TELEGRAM_INTEGRATION.md  architecture.md  cli.md  naming-conventions.md  plugins.md  registry.md  sdk.md  vault-api-for-plugins.md
docs/adr/: 001-single-writer-pattern.md  002-yaml-frontmatter-schema.md  003-event-idempotency.md  004-event-envelope.md  005-timezone-policy.md  006-gcal-sync-policy.md  007-plugin-sandbox.md  ADR-001-monorepo-src-layout.md  ADR-002-stable-plugin-sdk.md  ADR-003-plugin-manifest-json-schema.md  ADR-004-sandbox-permissions-subprocess.md  ADR-005-event-bus-scheduler-thalamus.md  ADR-006-vault-host-api-no-direct-fs.md  ADR-007-schemas-folder-contracts-single-source.md  ADR-008-ids-naming-conventions.md  ADR-009-pipelines-thin-orchestration.md  ADR-010-cli-make-canonical-interface.md  ADR-011-telegram-adapter-primary-ux.md  ADR-012-google-calendar-adapter-plugin.md  ADR-013-inbox-normalizer-plugin.md  ADR-014-task-fsm-timeboxing-hooks.md  ADR-015-logs-telemetry-jsonl-trace.md  ADR-016-graph-consistency-dedup-guardrails.md  README.md  _template.md
docs/architecture/: architecture-issues-diagram.md  conditional-reflection.md  dynamic-replanning.md  langgraph-llm-integration.md  meta-planning.md
docs/guides/: agent-grounding-best-practices.md  hot-reload-development.md  persistent-memory.md  quickstart-persistent-memory.md
docs/reports/: 001-alpha-readiness-audit.md  002-soft-alpha-completion.md  003-config-refactoring.md  004-project-cleanup-session.md  005-telegram-langgraph-pipeline-analysis.md  006-comprehensive-error-analysis.md  007-task-deletion-hallucination-fix.md  008-conversation-memory-hallucination.md  009-task-deletion-llm-format-copying.md  010-llm-returns-text-instead-of-json.md  011-telegram-performance-analysis.md  012-gemini-empty-response-fix.md  013-architecture-critical-analysis.md  014-native-function-calling-migration.md  015-parallel-tool-execution.md  016-confirmation-flow-for-destructive-operations.md  017-auto-uid-resolution.md  018-chat-mode-and-progress-updates.md  019-chat-mode-respond-node-fix.md  020-recursion-limit-bug-fix.md  021-confirmation-loop-bug-fix.md  022-pending-state-not-cleared.md  023-respond-node-state-loss.md
examples/: demo_commands.md  langgraph_integration_example.py
examples/minimal-sdk-plugin/: kira-plugin.json
examples/minimal-vault/tasks/: README.md
mutants/: mutmut-stats.json  pyproject.toml  setup.cfg
mutants/artifacts/audit/: audit-2025-10-09.jsonl
mutants/tests/: conftest.py
mutants/tests/integration/: test_agent_langgraph_e2e.py  test_langgraph_nl_responses.py  test_session_id_fixes.py
mutants/tests/unit/: test_agent_executor.py  test_agent_policies.py  test_atomic_writes.py  test_canonical_events.py  test_cli_demo.py  test_config_settings.py  test_conversation_memory.py  test_folder_contracts.py  test_host_api.py  test_ids_naming.py  test_inbox_plugin.py  test_maintenance_cleanup.py  test_message_handler.py  test_persistence.py  test_plugin_minimal.py  test_plugin_sandbox.py  test_policy_permissions.py  test_rag_store.py  test_registry.py  test_respond_node.py  test_rollup_aggregator.py  test_sandbox.py  test_sdk_surface.py  test_sync_contract.py  test_task_fsm.py  test_task_fsm_guards.py  test_time.py  test_time_utc_discipline.py  test_time_windows.py  (+4 more)
scripts/: backup_vault.sh  gen_manifest_schema.py  nightly_validation.py  restore_vault.sh
src/kira/: __init__.py
src/kira.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/integration/: test_agent_audit.py  test_agent_e2e.py  test_agent_langgraph_e2e.py  test_calendar_sync.py  test_doctor_diagnostics.py  test_gcal_sync_integration.py  test_inbox_pipeline.py  test_langgraph_nl_responses.py  test_phase0_requirements.py  test_phase2_requirements.py  test_phase4_requirements.py  test_phase7_requirements.py  test_pipelines.py  test_sandbox_plugin_execution.py  test_session_id_fixes.py  test_stress_concurrency.py  test_telegram_adapter.py  test_telegram_to_vault.py  test_telegram_vault_integration.py  test_vault_plugin_integration.py
tests/unit/: test_agent_executor.py  test_agent_graph_routing.py  test_agent_tools.py  test_atomic_writes.py  test_canonical_events.py  test_cli_demo.py  test_config_settings.py  test_context_memory.py  test_event_envelope.py  test_events.py  test_file_locking.py  test_folder_contracts.py  test_graph_validation.py  test_hardened_sandbox.py  test_host_api.py  test_idempotency.py  test_ids_naming.py  test_import_boundaries.py  test_inbox_plugin.py  test_ingress.py  test_langgraph_executor.py  test_langgraph_nodes.py  test_langgraph_state.py  test_llm_adapters.py  test_llm_router.py  test_maintenance_backup.py  test_maintenance_cleanup.py  test_manifest_schema.py  test_manifest_validation.py  test_message_handler.py  test_migration.py  test_ordering.py  test_persistence.py  test_persistent_memory.py  test_plugin_entry_points.py  test_plugin_fs_restrictions.py  test_plugin_sandbox.py  test_plugin_template.py  test_policy_permissions.py  test_quarantine.py  (+25 more)
(+176 files in other folders)
