[tool.poetry]
name = "kira"
version = "0.1.0"
description = "Kira monorepo"
authors = ["werserk"]
readme = "README.md"
packages = [{ include = "kira", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.0"
pyyaml = "^6.0"
jsonschema = "^4.0"
# Optional adapters (install as needed)
python-telegram-bot = { version = "^20.0", optional = true }
google-auth = { version = "^2.0", optional = true }
google-auth-oauthlib = { version = "^1.0", optional = true }
google-api-python-client = { version = "^2.0", optional = true }
# Scheduler
croniter = { version = "^2.0", optional = true }
# HTTP client (compatible with python-telegram-bot)
httpx = { version = ">=0.23.1,<0.28.0", optional = true }

[tool.poetry.extras]
telegram = ["python-telegram-bot", "httpx"]
gcal = ["google-auth", "google-auth-oauthlib", "google-api-python-client"]
all = ["python-telegram-bot", "google-auth", "google-auth-oauthlib", "google-api-python-client", "croniter", "httpx"]

[tool.poetry.scripts]
kira = "kira.cli.__main__:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
black = "^25.9.0"
ruff = "^0.8.0"
mypy = "^1.18.2"
pre-commit = "^4.3.0"
pytest-cov = "^7.0.0"
pytz = "^2025.2"
safety = "^3.6.2"
types-pyyaml = "^6.0.12.20250915"
types-pytz = "^2025.2.0.20250809"
types-jsonschema = "^4.25.1.20251008"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 120
target-version = "py312"
preview = true

[tool.ruff.lint]
select = [
  "E",   # pycodestyle: Enforces PEP 8 style errors
  "F",   # pyflakes: Detects undefined or unused variables
  "W",   # pycodestyle: Additional style warnings
  "I",   # isort: Ensures imports are properly sorted
  "UP",  # pyupgrade: Modernizes code to use newer Python features
  "B",   # flake8-bugbear: Highlights common bugs and bad practices
  "C4",  # flake8-comprehensions: Suggests improvements for comprehensions
  "SIM", # flake8-simplify: Simplifies complex expressions
  "Q",   # flake8-quotes: Enforces consistent usage of quotes
  "RET", # flake8-return: Ensures return statements are consistent
  "ARG", # flake8-unused-arguments: Warns about unused function arguments
  "TCH", # flake8-type-checking: Improves type-checking practices
  "ANN", # flake8-annotations: Encourages the use of type annotations
  "RUF", # Ruff-specific rules: Adds optimizations specific to Ruff
  "C90", # McCabe complexity checker
]
ignore = [
  "CPY001", # Ignore annotations for self
  "RUF001", # Ignore Cyrillic to Latin transliteration rule
  "RUF002", # Ignore Cyrillic to Latin transliteration rule in docstring
  "RUF003", # Ignore Cyrillic characters in comments
  "ANN401", # Allow Any in decorators
  "ANN204", # __post_init__ doesn't need return annotation
  "SIM102", # Nested if can be more readable than combined
  "SIM108", # Ternary operator can reduce readability
  "SIM103", # Direct return can reduce readability
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
  "ARG001",
  "ARG002",
  "ARG005",
  "S101",
  "ANN001",
  "ANN002",
  "ANN003",
  "ANN201",
  "ANN202",
  "ANN204",
  "B011",  # assert False
  "B017",  # pytest.raises(Exception)
  "B018",  # useless attribute access in tests
  "C901",
  "SIM102",
  "SIM117",
  "TC003",
  "UP028",
] # use of assert, test methods
"src/kira/cli/**/*.py" = [
  "C901",  # CLI commands are naturally complex
  "ANN001",  # Click decorators handle type annotations
  "ANN201",  # Click commands return int
  "ANN202",  # Private functions in CLI
  "ARG001",  # CLI interface consistency (kira_ext, kira_validate)
] # CLI commands
"src/kira/plugins/**/*.py" = [
  "C901",  # Plugin logic can be complex
  "ARG001",  # Plugin interface (inbox plugin)
] # Plugins
"src/kira/core/host.py" = ["C901"]  # Core complexity is architectural
"src/kira/core/links.py" = ["C901", "E741", "ARG001"]  # Link graph complexity
"src/kira/core/sandbox.py" = ["C901"]  # Sandbox complexity
"src/kira/core/task_fsm.py" = ["C901"]  # FSM complexity
"src/kira/core/telemetry.py" = ["C901"]  # Telemetry formatting
"src/kira/core/yaml_serializer.py" = ["C901"]  # Serialization complexity
"src/kira/core/idempotency.py" = ["ANN001"]  # Context manager protocol
"src/kira/core/ordering.py" = ["ARG002"]  # Interface compliance
"src/kira/migration/**/*.py" = ["C901"]  # Migration logic is complex
"src/kira/observability/**/*.py" = ["ANN003"]  # Logging kwargs
"src/kira/sync/ledger.py" = ["ANN001"]  # Context manager protocol

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "kira.cli.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "kira.plugins.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "kira.observability.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["kira.config.settings", "kira.sync.ledger", "kira.core.telemetry", "kira.core.quarantine", "kira.core.idempotency", "kira.core.ordering", "kira.core.yaml_serializer", "kira.core.task_fsm", "kira.core.event_envelope", "kira.core.config", "kira.core.ingress", "kira.migration.migrator", "kira.maintenance.backup"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["kira.adapters.*"]
ignore_errors = true
